--- a/package.json
+++ b/package.json
@@ -5,9 +5,5 @@
   "main": "index.js",
   "repository": " ",
   "author": "charles.lobo@gmail.com",
-  "license": "MIT",
-  "dependencies": {
-    "cote": "^0.17.3",
-    "elife-utils": "everlifeai/elife-utils"
-  }
+  "license": "MIT"
 }
