--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "version": "1.1.0",
   "description": "A simple skill for sending direct messages to other users",
   "main": "index.js",
-  "repository": " ",
   "author": "charles.lobo@gmail.com",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/everlifeai/eskill-direct-message.git"
+  },
+  "bugs": {
+    "url": "https://github.com/everlifeai/eskill-direct-message/issues"
+  },
+  "homepage": "https://github.com/everlifeai/eskill-direct-message#readme"
 }
